--- a/index_old.html
+++ b/index_old.html
@@ -31,6 +31,7 @@ Create a (hopefully non-creepy) fan page for something you love.
 <SCRIPT>alert ('Welcome to this page!')</SCRIPT>
 <SCRIPT>alert ('I hope you enjoy it.')</SCRIPT>
 <SCRIPT>alert ('Keep pushing OK to continue onto your surprise.')</SCRIPT>
+<!--
 <SCRIPT>alert ('So, while we\'re waiting, how are you?')</SCRIPT>
 <SCRIPT>alert ('Hope you\'re fine.')</SCRIPT>
 <SCRIPT>alert ('I\'m fine too. Thanks for asking.')</SCRIPT>
@@ -53,6 +54,8 @@ Create a (hopefully non-creepy) fan page for something you love.
 <SCRIPT>alert ('So, i guess we\'re stuck together for a while.')</SCRIPT>
 <SCRIPT>alert ('While we\'re waiting, why don\'t we have a talk.')</SCRIPT>
 <SCRIPT>alert ('You know, a heart to heart.')</SCRIPT>
+-->
+<!-- 
 <SCRIPT language=JavaScript>
 
 var namePrompt = prompt("so, what\'s your name, anyways?","");
@@ -64,9 +67,13 @@ function dispname (namePrompt){
 // "+namePrompt+" text or the script will not work.
 }
 </SCRIPT>
+//-->
+<!--
 <SCRIPT language=JavaScript>
    {dispname(namePrompt);} 
 </SCRIPT>
+-->
+<!-- 
 <SCRIPT>alert ('You have a weird name!')</SCRIPT>
 <SCRIPT>alert ('You must get teased a lot.')</SCRIPT>
 <SCRIPT>alert ('What kind of person would name their kid your name?')</SCRIPT>
@@ -107,9 +114,13 @@ function dispname (topicPrompt){
 // "+namePrompt+" text or the script will not work.
 }
 </SCRIPT>
-<SCRIPT language=JavaScript>
+// -->
+<!--
+<SCRIPT language=JavaScript><!--
    {dispname(topicPrompt);} 
 </SCRIPT>
+-->
+<!-- 
 <SCRIPT>alert ('Are you stupid or something?')</SCRIPT>
 <SCRIPT>alert ('I mean wake up, I\'ve heard of dumb things but jeez.....')</SCRIPT>
 <SCRIPT>alert ('No, just kidding, that wasn\'t THAT bad...')</SCRIPT>
@@ -204,15 +215,15 @@ function dispname (topicPrompt){
 <SCRIPT>alert ('That you made it through 150 alerts.')</SCRIPT>
 <SCRIPT>alert ('This is number 150, so I guess it\'s my last one. I hope you had fun reading these, and I hope you pass this page along to your friends! bye!')</SCRIPT>
 <SCRIPT>alert ('HAHA! fooled you! THIS is actually alert number 150. So anyway, have a good day.')</SCRIPT>
-
-
+-->
 <link rel="stylesheet" href="css/basic_website.css">
 
 </head>
 <body>
     <div id="navigation" class="flex-container">
-        <div><a href="index.html">Home</a></div>
-        <div><a href="about.html">About</a></div>
+        <div>Home</div>
+        <div>About Us</div>
+        <div>Products</div>
     </div>
     <div id="main-content" class="flex-container">
         Ha ha! You just endured Jeroen's most annoying webpage
